(fix tests and image alignment)

--- a/src/app/shared/components/misc/fullscreen-image-viewer/fullscreen-image-viewer.component.scss
+++ b/src/app/shared/components/misc/fullscreen-image-viewer/fullscreen-image-viewer.component.scss
@@ -12,8 +12,19 @@
   background-color: $black;
 
   .image-zoom ::ng-deep {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+    .ngxImageZoomContainer {
+      width: auto !important;
+      height: auto !important;
+    }
+
     .ngxImageZoomThumbnail {
       max-height: 100vh;
+      max-width: 100vw;
     }
 
     .ngxImageZoomFullContainer.ngxImageZoomLensEnabled {
